--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="/css/contacts.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
 <body>
     <div class="container">
@@ -21,6 +22,31 @@
             <input type="submit" value="send" id="button">
         </form>
     </div>
+
+    <footer>
+        <div class="middle">
+          <a class="btn" href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a class="btn" href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a class="btn" href="#">
+            <i class="fab fa-google"></i>
+          </a>
+          <a class="btn" href="#">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a class="btn" href="#">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a class="btn" href="#">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </footer>
+      
     
 </body>
 </html>
+
