--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <header>
         <h2 class="logo">RecipeRealm</h2>
         <nav class="navigation">
-            <a href="#">Recipes</a>
-            <a href="#">Ingredients</a>
-            <a href="/about.html">About</a>
+            <a href="Recipe.html">Recipes</a>
+            <a href="about.html">About</a>
             <a href="contacts.html">Contacts</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
