--- a/Recipe.html
+++ b/Recipe.html
@@ -28,8 +28,7 @@
         <div class="icons">
             <div id="search-btn" class="fas fa-search"></div>
             <a href="#favorites" class="fas fa-star"></a>
-            <a href="#blogs" class="fas fa-comments"></a>
-            <a href="#reviews" class="fas fa-user"></a>
+            <a href="#reviews" class="fas fa-comments"></a>
         </div>
 
     </div>
@@ -39,7 +38,6 @@
             <a href="#home">home</a>
             <a href="#popular">popular</a>
             <a href="#reviews">reviews</a>
-            <a href="#blogs">blogs</a>
         </nav>
     </div>
 
@@ -63,22 +61,24 @@
     <div class="row">
         <div class="content">
             <h3>Find your new favorite recipe</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi
-                cumque aperiam eum praesentium itaque facere aliquam doloribus sequi 
-                libero,optio laborum reiciendis ullam accusamus consequuntur recusandae
-                explicabo impedit deleniti molestias?
-            </p><a href="#" class="btn">Discover now</a>
+            <p>Welcome to RecipeRealm, your culinary companion for exploring a world of delicious recipes! 
+                Whether you're an aspiring home cook or a seasoned chef, Recipe Realm is here to inspire and guide you
+                on a gastronomic journey.Unleash your creativity in the kitchen with our detailed step-by-step 
+                instructions, accompanied by vibrant images that will make your taste buds tingle.
+                With RecipeRealm, prepare to elevate your cooking skills and create memorable dining experiences.
+                 Get ready to embark on a culinary adventure start exploring our bountiful recipe collection today!
+            </p>
+            <a href="#" class="btn">Discover recipes</a>
         </div>
         <div class="swiper books-slider">
             <div class="swiper-wrapper">
-                <a href="#" class="swiper-slide"><img src="images/1.jfif" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="images/2.jfif" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="images/3.jfif" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="images/4.jfif" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="images/5.jfif" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="images/6.jfif" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/1.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/2.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/3.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/4.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/5.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/6.jpg" alt=""></a>
             </div>
-            <img src="/images/podiums.jpg" class="stand" alt="">
             
         </div>
     </div>
@@ -94,7 +94,7 @@
         <i class="fas fa-mug-saucer"></i>
         <div class="content">
             <h3>Breakfast</h3> <!--add a-tag will link to page with breakfast reipes-->
-            <p>Sample some of our finest breakfast recipes</p>
+            <p><a href="#breakfastrecipes"> Sample some of our finest breakfast recipes</a></p>
         </div>
     </div>
 
@@ -102,7 +102,7 @@
         <i class="fas fa-bowl-rice"></i>
         <div class="content">
             <h3>Lunch</h3>
-            <p>Some recipes ideas for lunch</p>
+            <p><a href="#lunchrecipes">Some recipes ideas for lunch</a></p>
         </div>
     </div>
 
@@ -110,7 +110,7 @@
         <i class="fas fa-utensils fa-lg"></i>
         <div class="content">
             <h3>Dinner</h3> 
-            <p>Some recipes ideas for Dinner</p>
+            <p><a href="#dinnerecipestag">Some recipes ideas for Dinner</a></p>
         </div>
     </div>
     
@@ -131,11 +131,11 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/1.jfif" alt="">
+                <img src="images/1.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Chapos</h3>
-                <div class="description">local dish <span>other notes</span></div>
+                <h3>Chapo with beef stew</h3>
+                <div class="description">prep time</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -148,11 +148,11 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/2.jfif" alt="">
+                <img src="images/2.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Amba khatta</h3>
-                <div class="description">Raw mango pickle <span>notes</span></div>
+                <h3>white rice with stew on the side</h3>
+                <div class="description">prep time:</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -165,11 +165,11 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/3.jfif" alt="">
+                <img src="images/3.jpg" alt="">
             </div>
             <div class="content">
-                <h3>beans&corn</h3>
-                <div class="description">local dish <span> lorem</span></div>
+                <h3>ugali with eggs and spinach</h3>
+                <div class="description">prep time:</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -181,28 +181,11 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/4.jfif" alt="">
+                <img src="images/4.jpg" alt="">
             </div>
             <div class="content">
-                <h3>lorem</h3>
-                <div class="description">lorem <span>lorem</span></div>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-            </div>
-        </a>
-
-        <a href="#" class="swiper-slide box">
-            <div class="image">
-                <img src="images/5.jfif" alt="">
-            </div>
-            <div class="content">
-                <h3>lorem</h3>
-                <div class="description">lorem <span>lorem</span></div>
+                <h3>chips kuku</h3>
+                <div class="description">prep time: </div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -215,11 +198,11 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/6.jfif" alt="">
+                <img src="images/5.jpg" alt="">
             </div>
             <div class="content">
-                <h3>lorem</h3>
-                <div class="description">lorem <span>lorem</span></div> <!--remove span-->
+                <h3>brown rice pilau</h3>
+                <div class="description">prep time: </div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -232,11 +215,28 @@
 
         <a href="#" class="swiper-slide box">
             <div class="image">
-                <img src="images/7.jfif" alt="">
+                <img src="images/6.jpg" alt="">
             </div>
             <div class="content">
-                <h3>lorem</h3>
-                <div class="description">lorem <span>lorem</span></div>
+                <h3>Chicken masala</h3>
+                <div class="description">prep time:</div> 
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="swiper-slide box">
+            <div class="image">
+                <img src="images/7.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>Beef stew</h3>
+                <div class="description">prep time:</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -258,8 +258,6 @@
 <!--popular-picks section ends-->
 
 <!--might add reviews non-priority-->
-
-<!--review sect ends-->
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>   
