fixed relative paths

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <div class="section">
@@ -34,7 +34,7 @@
                  </div>
             </div>
             <div class="image-section">
-                 <img src="/images/dragon.jpg" alt="">
+                 <img src="images/dragon.jpg" alt="">
             </div>
         </div>
     </div>
