--- a/Recipe.html
+++ b/Recipe.html
@@ -78,6 +78,10 @@
                 <a href="#" class="swiper-slide"><img src="images/4.jpg" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="images/5.jpg" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="images/6.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/8.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/9.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/13.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="images/15.jpg" alt=""></a>
             </div>
             
         </div>
