--- a/about.html
+++ b/about.html
@@ -17,10 +17,11 @@
                 </div>
                 <div class="content">
                     <h3>RecipeRealm</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Minima expedita ipsa officia! Totam temporibus corrupti 
-                        aliquid ad sit unde illo quidem aliquam! Magnam, assumenda! Id, quae!
-                    </p>
+                        <p>Recipe Realm,is a culinary sanctuary crafted by a dedicated team of passionate developers.
+                            Discover a vast collection of curated recipies and explore a diverse range of culinary delights.
+                            With a user-friendly experience and meticulous attention to detail, we aim to elevate your cooking adventures. 
+                            Join us in exploring the endless possibilities of the culinary realm and unleash your inner chef today!
+                        </p>
                     <div class="button">
                         <a href="">Read More</a>
                     </div>
