adjust class-relevance

--- a/Recipe.html
+++ b/Recipe.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link rel="stylesheet" href="css/Recipe.css">
+    <link rel="stylesheet" href="css/recipe.css">
     
 </head>
 <body>
@@ -125,11 +125,11 @@
 
 <!--popular-picks section ends-->
 
-<section class="arrivals" id="arrivals">
+<section class="popular" id="popular">
 
     <h1 class="heading"><span>popular</span> </h1>
 
-    <div class="swiper arrivals-slider">
+    <div class="swiper popular-slider">
 
       <div class="swiper-wrapper">
 
@@ -266,6 +266,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>   
    
-<script src="js/Recipe.js"></script> 
+<script src="js/recipe.js"></script> 
 </body>
 </html>
