--- a/contacts.html
+++ b/contacts.html
@@ -23,24 +23,22 @@
         </form>
     </div>
 
+<!--social-links for reciperealm-->
     <footer>
         <div class="middle">
-          <a class="btn" href="#">
+          <a class="btn" href="#reciperealms-facebook">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a class="btn" href="#">
+          <a class="btn" href="#reciperealms-twitter">
             <i class="fab fa-twitter"></i>
           </a>
-          <a class="btn" href="#">
-            <i class="fab fa-google"></i>
-          </a>
-          <a class="btn" href="#">
+          <a class="btn" href="#reciperealms-instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a class="btn" href="#">
+          <a class="btn" href="#reciperealms-youtube">
             <i class="fab fa-youtube"></i>
           </a>
-          <a class="btn" href="#">
+          <a class="btn" href="#reciperealms-github-repo">
             <i class="fab fa-github"></i>
           </a>
         </div>
