--- a/recipe.html
+++ b/recipe.html
@@ -27,8 +27,8 @@
 
         <div class="icons">
             <div id="search-btn" class="fas fa-search"></div>
-            <a href="#favorites" class="fas fa-star"></a>
-            <a href="#reviews" class="fas fa-comments"></a>
+            <a href="#reviews" class="fas fa-comment"></a>
+            <a href="#add recepies" class="fas fa-circle-plus"></a>
         </div>
 
     </div>
@@ -49,9 +49,8 @@
 
 <nav class="bottom-navbar">
     <a href="#home" class="fas fa-home"></a>
-    <a href="#popular" class="fas fa-tags"></a>
-    <a href="#reviews" class="fas fa-comments"></a>
-    <a href="#blogs" class="fas fa-blogs"></a>
+    <a href="#popular" class="fas fa-arrow-trend-up"></a>
+    <a href="#reviews" class="fas fa-comment"></a>
 </nav>
 
 
