--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h2 class="logo">RecipeRealm</h2>
         <nav class="navigation">
-            <a href="recipe.html">Recipes</a>
+            <a href="landing.html">Home</a>
             <a href="about.html">About</a>
             <a href="contacts.html">Contacts</a>
             <button class="btnLogin-popup">Login</button>
