--- a/landing.html
+++ b/landing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Realm | Home</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="css/landing.css">
@@ -39,16 +40,6 @@
           <p>Discover nutritious plant-based recipes for a healthy lifestyle.</p>
           <a href="recipe.html" class="button">Browse Recipes</a>
         </div>
-  </section>
-
-
-  <section class="newsletter">
-    <h2>Subscribe for latest updates</h2>
-      <p>Stay up-to-date with our latest recipes and cooking tips.</p>
-      <form action="mailto:rrealm@gmail.com" method="POST">
-        <input type="email" name="email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe</button>
-      </form>
   </section>
 
   <section class="reviews" id="reviews">
@@ -102,7 +93,15 @@
     </div>
 
 
+  </section>
 
+  <section class="newsletter">
+    <h2>Subscribe for latest updates</h2>
+      <p>Stay up-to-date with our latest recipes and cooking tips.</p>
+      <form action="mailto:rrealm@gmail.com" method="POST">
+        <input type="email" name="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
   </section>
 
   <footer>
