--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About us</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="css/about.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" >
 </head>
 <body>
     <div class="section">
