--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/contacts.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" >
 </head>
 <body>
     <div class="container">
