add-recipe-page

--- a/recipe.html
+++ b/recipe.html
@@ -29,7 +29,7 @@
         <div class="icons">
             <div id="search-btn" class="fas fa-search"></div>
             <a href="#reviews" class="fas fa-comment"></a>
-            <a href="#add recepies" class="fas fa-circle-plus"></a>
+            <a href="add.html" class="fas fa-circle-plus"></a>
         </div>
 
     </div>
