--- a/recipe.html
+++ b/recipe.html
@@ -9,10 +9,11 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/recipe.css">
     
 </head>
-<body>
+<body class="light">
 
 <!--header-->
 <header class=" header">
@@ -39,6 +40,15 @@
             <a href="#home">home</a>
             <a href="#popular">popular</a>
             <a href="#reviews">reviews</a>
+        </nav>
+        <nav class="navigation">
+            <input type="checkbox" name="" id="toggle">
+      
+            <label class="toggle" for="toggle">
+                <i class="bx bxs-sun"></i>
+                <i class="bx bxs-moon"></i>
+                <span class="ball"></span>      
+            </label>
         </nav>
     </div>
 
