--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <h2 class="logo">RecipeRealm</h2>
         <nav class="navigation">
             <a href="landing.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contacts.html">Contacts</a>
+            <a href="recipe.html">Recipes</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
 
