--- a/recipe.html
+++ b/recipe.html
@@ -31,15 +31,17 @@
             <div id="search-btn" class="fas fa-search"></div>
             <a href="#reviews" class="fas fa-comment"></a>
             <a href="add.html" class="fas fa-circle-plus"></a>
+            <a href="index.html" class="fas fa-arrow-right-to-bracket"></a>
+
         </div>
 
     </div>
 
     <div class="header-2">
         <nav class="navbar">
-            <a href="#home">home</a>
+            <a href="landing.html">home</a>
             <a href="#popular">popular</a>
-            <a href="#reviews">reviews</a>
+            <a href="index.html">login</a>
         </nav>
         <nav class="navigation">
             <input type="checkbox" name="" id="toggle">
@@ -59,9 +61,9 @@
 <!--bottom navbar-->
 
 <nav class="bottom-navbar">
-    <a href="#home" class="fas fa-home"></a>
+    <a href="index.html" class="fas fa-home"></a>
     <a href="#popular" class="fas fa-arrow-trend-up"></a>
-    <a href="#reviews" class="fas fa-comment"></a>
+    <a href="index.html" class="fas fa-arrow-right-to-bracket"></a>
 </nav>
 
 
