--- a/landing.html
+++ b/landing.html
@@ -96,12 +96,12 @@
 <!--contact us-->
 
 <section class="reviews" id="reviews">
-  <h1 class="heading"><span>Contact us</span></h1>
+  <h1 class="heading"><span>Share Your Thoughts</span></h1>
 </section>
 
 <div class="bottle">
         <form action="mailto:Rrealm@gmail.com" method="post" enctype="text/plain">
-            <h1>Share Your Thoughts!</h1>
+            <h1>contact us</h1>
             <input type="text" id="firstName" placeholder="First Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="email" id="email" placeholder="Email" required>
