--- a/landing.html
+++ b/landing.html
@@ -24,7 +24,7 @@
           <span class="ball"></span>      
       </label>
   </nav>
-    <h1>Welcome to Recipe Realm</h1>
+    <h1>Welcome to Recipe Realm</h1><br>
     <p>Your Recipe Oasis</p>
     <p>Discover the most delightful recipes for every occasion</p>
   </header><br>
@@ -49,7 +49,7 @@
 
           </div>
           <div class="image-section">
-              <img src="images/temp.jpg" alt="">
+              <img src="images/temp.jpg" alt="RecipeRealm-logo">
           </div>
       </div>
   </div>
@@ -57,6 +57,7 @@
 
 
   <section class="recipe-collections">
+
       <h1>Features</h1>
       <h2>Explore Popular Recipe Collections</h2>
       
@@ -168,6 +169,7 @@
 
 
   </section>
+  <br>
 
   <section class="newsletter">
     <h2>Subscribe for latest updates</h2>
