--- a/landing.html
+++ b/landing.html
@@ -24,10 +24,16 @@
           <span class="ball"></span>      
       </label>
   </nav>
+  <nav class="navbar">
+    <a href="index.html">Login</a>
+    <a href="recipe.html">Recipes</a>
+  </nav>
     <h1>Welcome to Recipe Realm</h1><br>
     <p>Your Recipe Oasis</p>
     <p>Discover the most delightful recipes for every occasion</p>
-  </header><br>
+    <br>
+    
+</header>
 
     <div class="section">
       <div class="container">
