--- a/landing.html
+++ b/landing.html
@@ -25,8 +25,8 @@
       </label>
   </nav>
   <nav class="navbar">
-    <a href="index.html">Login</a>
-    <a href="recipe.html">Recipes</a>
+    <a href="recipe.html"><i class="fa-solid fa-dragon fa-xl"></i>Recipes</a>
+    <a href="index.html"><i class="fa-solid fa-arrow-right-to-bracket fa-xl"></i>Login</a>
   </nav>
     <h1>Welcome to Recipe Realm</h1><br>
     <p>Your Recipe Oasis</p>
