--- a/landing.html
+++ b/landing.html
@@ -55,7 +55,7 @@
 
           </div>
           <div class="image-section">
-              <img src="images/temp.jpg" alt="RecipeRealm-logo">
+              <img src="images/logo_transparent.png" alt="RecipeRealm-logo">
           </div>
       </div>
   </div>
