--- a/recipe.html
+++ b/recipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe page</title>
+    <title>RecipeRealm | page</title>
 
     <link rel="icon" type="image/x-icon" href="images/favicon.png" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
@@ -29,9 +29,9 @@
 
         <div class="icons">
             <div id="search-btn" class="fas fa-search"></div>
-            <a href="#reviews" class="fas fa-comment"></a>
+            <a href="login.html" class="fas fa-arrow-right-to-bracket"></a>
             <a href="add.html" class="fas fa-circle-plus"></a>
-            <a href="index.html" class="fas fa-arrow-right-to-bracket"></a>
+            <a href="#ourblogsALX" class="fas fa-comment"></a>
 
         </div>
 
@@ -39,9 +39,9 @@
 
     <div class="header-2">
         <nav class="navbar">
-            <a href="landing.html">home</a>
+            <a href="index.html">home</a>
             <a href="#popular">popular</a>
-            <a href="index.html">login</a>
+            <a href="login.html">login</a>
         </nav>
         <nav class="navigation">
             <input type="checkbox" name="" id="toggle">
@@ -63,7 +63,7 @@
 <nav class="bottom-navbar">
     <a href="index.html" class="fas fa-home"></a>
     <a href="#popular" class="fas fa-arrow-trend-up"></a>
-    <a href="index.html" class="fas fa-arrow-right-to-bracket"></a>
+    <a href="login.html" class="fas fa-arrow-right-to-bracket"></a>
 </nav>
 
 
