--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
   <section class="featured-recipe">
     <h2>Today's Featured Recipe</h2>
     <div class="recipe-card">
-        <img src="images/4.jpg" alt="Featured Recipe">
-          <h3>Chips-Kuku</h3>
+        <img src="images/pilau.jpg" alt="Featured Recipe">
+          <h3>Pilau</h3>
           <p>Try this mouth-watering Kenyan dish with bold flavors.</p>
-          <a href="recipe.html" class="button">Get the Recipe</a>
+          <a href="page.html" class="button">Get the Recipe</a>
     </div>
 </section><br>
 
