--- a/page.html
+++ b/page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/favicon.png" >
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Recipes | page</title>
+    <title>Recipes | Recipename</title>
     <link rel="stylesheet" href="css/page.css">
     
 </head>
@@ -25,12 +25,14 @@
         </header>
       
         <header>
-            <h1>Recipe page</h1>
+            <div class="logo">
+                <img src="images/logo_small.png" alt="RecipeRealm-logo">
+            </div>
         </header>
         <hr>
 
     <div class="header">
-        <h2>Recipe Name</h2>
+        <h2>Recipe Name:</h2>
         <h3>Pilau</h3>
     </div>
 
@@ -41,16 +43,21 @@
 
     <div class="descriptions">
         <h2>Description</h2>
-        <p class="info">East African Pilau is a traditional, beautiful fragrant rice dish made 
+        <p class="info">
+            East African Pilau is a traditional, beautiful fragrant rice dish made 
             with many 
             aromatic spices that adds an amazing depth of flavor to the rice.
-             It can be made with either beef or chicken.
+            It can be made with either beef or chicken.
         </p>
         <!--meal description-->
-        <h3>Recipe category:</h3><p>Lunch/Dinner</p>
-        <h3>Difficulty level:</h3><p>Easy</p>
-        <h3>Servings:</h3><p>3-4</p>
-        <h3>Cooking time:</h3><p>35 Minutes</p>
+        <h3>Recipe category:</h3>
+            <p>Lunch/Dinner</p>
+        <h3>Difficulty level:</h3>
+            <p>Easy</p>
+        <h3>Servings:</h3> 
+            <p>3-4</p>
+        <h3>Cooking time:</h3>  
+            <p>35 Minutes</p>
     </div>
 
     <div class="ingredients">
@@ -75,7 +82,7 @@
     </div>
 
     <div class="instructions">
-        <h2>Instructions</h2>
+        <h2>Instructions:</h2>
         <ol>
             <li>
                 Rinse the basmati rice under cold water until the water runs clear.
@@ -124,7 +131,7 @@
     </div>
 
     <div class="notes">
-        <h2>Additional Notes</h2>
+        <h2>Additional Notes:</h2>
         <ul>
             <li>Basmati rice takes about 20 minutes to cook however, your cooking time may vary depending on the 
                 type of rice you use.
@@ -142,7 +149,7 @@
     </div>
 
     <div class="nutrition">
-        <h2>Nutrition Information</h2>
+        <h2>Nutrition Information:</h2>
         <ul>
             <li>Calories: 192 calories per serving.</li>
             <li>Fat: 12 grams of fat per serving.</li>
