--- a/page.html
+++ b/page.html
@@ -36,7 +36,7 @@
         <h3>Pilau</h3>
     </div>
 
-    <div class="image">
+    <div class="image-container">
         <img src="images/pilau.jpg" alt="Recipe-image">
 
     </div>
